# ECStory02

./: Taskfile.yml  ecstory02.cabal
app/: Main.hs
data/: quest01_1.txt  quest01_2.txt  quest01_3.txt  quest02_1.txt  quest02_2.txt  quest02_3.txt  quest03_1.txt  quest03_2.txt  quest03_3.txt
lib/: Quest01.hs  Quest02.hs  Quest03.hs  Util.hs
