cabal-version: 3.14
name: ecstory02
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  ghc-options:
    -threaded
    -O2

  exposed-modules:
    Quest01
    Quest02
    Quest03
    Util

  hs-source-dirs: lib
  build-depends:
    base ^>=4.21.0.0,
    array,
    containers,
    hashable,
    mtl,
    parsec,
    split,
    unordered-containers,
    parallel,
    deepseq,

  default-language: GHC2024

executable ecstory02
  import: warnings
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2

  main-is: Main.hs
  build-depends:
    base ^>=4.21.0.0,
    ecstory02,

  hs-source-dirs: app
  default-language: GHC2024
